Actulizacion de todas las secciones

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,14 +8,14 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#intro" class="more scrolly">Welcome</a></li>
-            <li><a href="#couple" class="more scrolly">The Couple</a></li>
-            <li><a href="#travel" class="more scrolly">Traveling to Lawrence</a></li>
-            <li><a href="#location" class="more scrolly">The Venue</a></li>
-            <li><a href="#lodging" class="more scrolly">Lodging</a></li>
-            <li><a href="#party" class="more scrolly">The Wedding Party</a></li>
-            <li><a href="#registry" class="more scrolly">Registry</a></li>
-            <li><a href="#cta" class="more scrolly">RSVP</a></li>
+            <li><a href="#intro" class="more scrolly">La Boda</a></li>
+            <li><a href="#couple" class="more scrolly">La Pareja</a></li>
+            <li><a href="#travel" class="more scrolly">El Lugar</a></li>
+            <li><a href="#location" class="more scrolly">El Mapa</a></li>
+            <!--<li><a href="#lodging" class="more scrolly">Lodging</a></li>-->
+            <!--<li><a href="#party" class="more scrolly">The Wedding Party</a></li>-->
+            <li><a href="#registry" class="more scrolly">La Lista</a></li>
+            <li><a href="#cta" class="more scrolly">Contáctanos</a></li>
           </ul>
         </div>
       </li>
