--- a/_includes/sections/couple.html
+++ b/_includes/sections/couple.html
@@ -3,12 +3,9 @@
     <img src="images/pic01.jpg" alt="" />
   </div>
   <div class="content">
-    <h2>Sarah and Matt</h2>
-    <p>Sarah Chao, a native of southern Minnesota, and Matt Menzenski, a native
-    of central New York, met in Lawrence, Kansas, in August 2014 in the
-    University of Kansas's Department of Slavic Languages &amp; Literatures, where
-    Matt was entering his second year in the graduate program and Sarah was
-    beginning her first.</p>
+    <h2>Pablo y Liza</h2>
+    <p>Pablo Rengifo, nativo de Cali, y Liza Gruesso, nativa
+    de Bogotá, se conocieron en Guasca en el 2016 gracias a su amiga PepaPig.</p>
   </div>
 </section>
 <section class="spotlight">
@@ -16,12 +13,12 @@
     <img src="images/pic02.jpg" alt="" />
   </div>
   <div class="content">
-    <p>It didn't take long for Sarah and Matt to realize that they had a lot
+    <p>It didn't take long for Pablo and Liza to realize that they had a lot
     in common. They quickly bonded
     over a love of cheesy nineties songs, brunch, Russian, and dumb jokes
-    (okay, that last one is really just Matt). Soon they were spending every
+    (okay, that last one is really just Pablo). Soon they were spending every
     minute together.</p>
-    <p>In early 2015, Matt and Sarah moved in together, and Dave the Cat
+    <p>In early 2017, Pablo and Liza moved in together, and Mr. Paul
     joined the family.</p>
   </div>
 </section>
@@ -30,14 +27,14 @@
     <img src="images/pic03.jpg" alt="" />
   </div>
   <div class="content">
-    <p>Sarah and Matt both left KU in 2016 and now work in Kansas City.
-    Sarah is an older adult care manager for
-    <a href="http://www.jfskc.org/">Jewish Family Services</a>, where she helps
+    <p>Pablo and Liza both left KU in 2016 and now work in Kansas City.
+    Pablo is an manager for
+    <a href="http://www.bancodealimentos.org.co/">Banco de Alimentos</a>, where he helps
     Russian-speaking clients access resources and navigate the aging journey.
-    Matt is a software
-    engineer at <a href="https://payitgov.com/">PayIt</a>, a Kansas City
+    Liza is an independent
+    consultant at <a href="http://www.microymacroconsultores.com/">Micro & Macro</a>, a Kansas City
     startup focused on improving citizen-government interaction.</p>
-    <p>Matt and Sarah both love their jobs and are looking forward to starting
+    <p>Pablo and Liza both love their jobs and are looking forward to starting
     the next chapter of their lives together in Kansas City.</p>
   </div>
 </section>
