--- a/_includes/sections/location.html
+++ b/_includes/sections/location.html
@@ -7,7 +7,7 @@
       scrolling="no"
       marginheight="0"
       marginwidth="0"
-      src="https://www.google.com/maps/d/embed?mid=1dOwfjqqQ3KrsqmDfm5nlyk1L6FI"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.571828416168!2d-74.21377268551724!3d4.843333241753509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f8024205fed1f%3A0x3178c2a37760c039!2sHacienda+El+Remanso+del+Rio!5e0!3m2!1sen!2sus!4v1517933935676"
       allowfullscreen>
     </iframe>
     <br>
@@ -18,7 +18,7 @@
       scrolling="no"
       marginheight="0"
       marginwidth="0"
-      src="https://www.google.com/maps/d/embed?mid=1dOwfjqqQ3KrsqmDfm5nlyk1L6FI"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.571828416168!2d-74.21377268551724!3d4.843333241753509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f8024205fed1f%3A0x3178c2a37760c039!2sHacienda+El+Remanso+del+Rio!5e0!3m2!1sen!2sus!4v1517933935676"
       allowfullscreen>
     </small>
   </section>
