--- a/_includes/sections/intro.html
+++ b/_includes/sections/intro.html
@@ -1,9 +1,9 @@
 <div class="inner">
   <header class="major">
-    <h2>Come party with us in Lawrence!</h2>
-    <p>Sarah Chao and Matt Menzenski are tying the knot, and you're invited!</p>
-    <p>The wedding will take place in Lawrence, Kansas at Centennial Park's Eastern pavilion (see the <a href="#location" class="more scrolly">map below</a>) on Saturday, June 3, 2017. The pavilion is a covered, outdoor space with banquet-style picnic tables and a small deck area. The park itself is a sprawling green space with a playground, restrooms, skate park, and disc-golf course.</p>
-    <p>The ceremony is scheduled for 5:00pm, rain or shine. Drinks, local barbecue, and dessert to follow. Guests are welcome to arrive anytime after 4:00pm. We will be outdoors, enjoying the sunny weather (historically, temperatures average 65&deg;F on June 3 in Lawrence), playing lawn games, and eating barbecue. Feel free to wear whatever you will be comfortable in.</p>
-    <p><em>In the unlikely case of extreme or inclement weather, please check this webpage for any last-minute adjustments to the wedding schedule.</em></p>
+    <h2>Salsa & Choque en Subachoque!</h2>
+    <p>Pablo Rengifo Y Liza Gruesso van a formalizar la cosa y estas invitado!</p>
+    <p>La boda será en la hacienda Remanso del Río (ver <a href="#location" class="more scrolly">mapa</a>) el viernes 20 de Julio de 2018.</p>
+    <p>La ceremonia esta programada para las 4:00pm, llueva, truene, o relampaguee. Seguido a la ceremonia habrá un banquete y la respectiva parranda. Los invitados pueden llegar a culquier hora despues de las 3:00pm para compartir y tomarse el alguito. Compartiremos al aire libre, disfrutando del clima (historicamente Subachoque ofrece un clima de 20&deg;C promedio en el mes de Julio) y cocteles.</p>
+    <p><em>En caso de clima adverso, por favor visita el sitio para actulizaciones.</em></p>
   </header>
 </div>
