--- a/_includes/sections/registry.html
+++ b/_includes/sections/registry.html
@@ -1,9 +1,7 @@
 <div class="inner">
   <header class="major">
-    <h2>Registry</h2>
-    <p>Matt and Sarah have been living together for two years, and have acquired most essential household goods in that time, so they were somewhat reluctant to register for gifts&hellip; until they discovered Zola registries. The online registry is non-conventional: it includes options like contributing to a life fund, or gifting an experience.</p>
-      <p>For guests who prefer to give a material gift, there are some included on the registry website &mdash; but please know that any heirloom, hand-made, or otherwise unique gifts are absolutely appreciated!</p>
-      <p>If you will be giving a registry item acquired through a different platform, you may <a href="mailto:maryclairechao@gmail.com">send an email to bridesmaid Mary Claire Chao</a> and request that a gift be marked as 'purchased' on Zola.</p>
+    <h2>La Bolsa de Viaje</h2>
+    <p>Pablo y Liza han soñado por mucho tiempo con conocer la <a href="https://es.wikipedia.org/wiki/Aurora_polar"> Aurora Boreal</a>. Puedes ayudarles a cumplir su sueño haciendo una contribución a su Bolsa de Viaje, la cual tienen registrada en la agencia de viajes <a href="http://www.reyestours.com/">Reyes Tours</a>.</p>
   </header>
-    <h4><a href="https://www.zola.com/registry/matt-and-sarah">View Matt and Sarah's registry here.</a></h4>
+    <h4><a href="http://www.reyestours.com/">Visita la Bolsa de Viaje de Pablo y Liza.</a></h4>
 </div>
