Actualizacion del header, la concha de tu madre

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
             <li><a href="#location" class="more scrolly">El Mapa</a></li>
             <!--<li><a href="#lodging" class="more scrolly">Lodging</a></li>-->
             <!--<li><a href="#party" class="more scrolly">The Wedding Party</a></li>-->
-            <li><a href="#registry" class="more scrolly">La Lista</a></li>
+            <li><a href="#registry" class="more scrolly">La Bolsa de Viaje</a></li>
             <li><a href="#cta" class="more scrolly">Contáctanos</a></li>
           </ul>
         </div>
