actulizar footer lpqlrp

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,17 +14,8 @@
     {% endfor %}
   </ul>
   <ul class="copyright">
-    <li>&copy; {% assign thisyear = site.time | date: "%Y" %}
-    {% if site.first_published %}
-      {% capture diff %}{{ site.first_published | minus:thisyear }}{% endcapture %}
-      {% if diff contains '-' %}{{ site.first_published }},{% endif %}
-    {% endif %}
-    {{ thisyear }}
-    {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
-    <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-    <li>Built with: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
-  </ul>
-  <ul class="copyright">
-    <li>All photos &copy; 2016 Rusty Wright of <a href="http://waldronphotograph.co/" target="_blank">Waldron Photograph Company</a>. Used with permission.</li>
+    <li>&copy; 2018 D.GRUESSO</li>
+    <li>Diseño: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+    <li>Construido con: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
   </ul>
 </footer>
