update couple and fix intro spelling errors

--- a/_includes/sections/couple.html
+++ b/_includes/sections/couple.html
@@ -27,14 +27,14 @@
     <img src="images/pic03.jpg" alt="" />
   </div>
   <div class="content">
-    <p>Pablo and Liza both left KU in 2016 and now work in Kansas City.
+    <p>Pablo and Liza both left KU in 2016 and now work in Bogota.
     Pablo is an manager for
     <a href="http://www.bancodealimentos.org.co/">Banco de Alimentos</a>, where he helps
-    Russian-speaking clients access resources and navigate the aging journey.
+    ensure lower income families and individuals are fed.
     Liza is an independent
-    consultant at <a href="http://www.microymacroconsultores.com/">Micro & Macro</a>, a Kansas City
-    startup focused on improving citizen-government interaction.</p>
+    consultant at <a href="http://www.microymacroconsultores.com/">Micro & Macro</a>, a Bogotá
+    consultancy focused on public service contracts.</p>
     <p>Pablo and Liza both love their jobs and are looking forward to starting
-    the next chapter of their lives together in Kansas City.</p>
+    the next chapter of their lives together in Bogotá.</p>
   </div>
 </section>
