--- a/_includes/sections/intro.html
+++ b/_includes/sections/intro.html
@@ -3,7 +3,7 @@
     <h2>Salsa & Choque en Subachoque!</h2>
     <p>Pablo Rengifo Y Liza Gruesso van a formalizar la cosa y estas invitado!</p>
     <p>La boda será en la hacienda Remanso del Río (ver <a href="#location" class="more scrolly">mapa</a>) el viernes 20 de Julio de 2018.</p>
-    <p>La ceremonia esta programada para las 4:00pm, llueva, truene, o relampaguee. Seguido a la ceremonia habrá un banquete y la respectiva parranda. Los invitados pueden llegar a culquier hora despues de las 3:00pm para compartir y tomarse el alguito. Compartiremos al aire libre, disfrutando del clima (historicamente Subachoque ofrece un clima de 20&deg;C promedio en el mes de Julio) y cocteles.</p>
-    <p><em>En caso de clima adverso, por favor visita el sitio para actulizaciones.</em></p>
+    <p>La ceremonia esta programada para las 4:00pm, llueva, truene, o relampaguee. Seguido a la ceremonia habrá un banquete y la respectiva parranda. Los invitados pueden llegar a cualquier hora despues de las 3:00pm para compartir y tomarse el alguito. Compartiremos al aire libre, disfrutando del clima (historicamente Subachoque ofrece un clima de 20&deg;C promedio en el mes de Julio) y cocteles.</p>
+    <p><em>En caso de clima adverso, por favor visita el sitio para actualizaciones.</em></p>
   </header>
 </div>
