--- a/_includes/sections/intro.html
+++ b/_includes/sections/intro.html
@@ -1,9 +1,23 @@
 <div class="inner">
   <header class="major">
-    <h2>Salsa & Choque en Subachoque!</h2>
-    <p>Pablo Rengifo Y Liza Gruesso van a formalizar la cosa y estas invitado!</p>
-    <p>La boda será en la hacienda Remanso del Río (ver <a href="#location" class="more scrolly">mapa</a>) el viernes 20 de Julio de 2018.</p>
-    <p>La ceremonia esta programada para las 4:00pm, llueva, truene, o relampaguee. Seguido a la ceremonia habrá un banquete y la respectiva parranda. Los invitados pueden llegar a cualquier hora despues de las 3:00pm para compartir y tomarse el alguito. Compartiremos al aire libre, disfrutando del clima (historicamente Subachoque ofrece un clima de 20&deg;C promedio en el mes de Julio) y cocteles.</p>
-    <p><em>En caso de clima adverso, por favor visita el sitio para actualizaciones.</em></p>
+    <h2>Los Detalles</h2>
+    <p>Nuestra boda será el viernes 20 de julio de 2018, en la Hacienda El Remanso del Río (ver <a href="#location" class="more scrolly">mapa</a>). Hemos programado la ceremonia para las 4:00pm (en punto!!!) y luego una reunión para celebrar tanto amor.</p>
+
+    <p>Esperamos a los invitados a las 3:30p.m., para que tengan tiempo de parquear y ubicarse en La Capilla.</p>
+
+    <p>La Hacienda queda ubicada en Subachoque y allí mismo queda La Capilla donde se realizará la ceremonia y el lugar de la recepción, que se extenderá hasta la media noche.</p>
+
+    <p>El dress code es formal y, en lo posible, sobretodo para las mujeres, nos encantaría que evitaran el color negro.</p>
+
+    <p>Si algún invitado requiere acomodación para pasar la noche, les pedimos por favor avisarnos para que les encontremos las opciones disponibles. Ante todo la comodidad :)</p>
+
+    <p>Así mismo, tendremos un ángel de ruta que se encargará de reservar y coordinar el servicio de conductores, para que nuestros invitados puedan tomarse sus traguitos con total confianza y seguridad.</p>
+
+    <p>Estamos muy emocionados!!!</p>
+
+    <p><em>“Este es el sueño que compartimos,
+el que queremos cuidar a lo largo del tiempo,
+el que hablará por nosotros, más que cualquier palabra,
+el que nos reencontrará en cada amanecer y en cada despertar”.</em></p>
   </header>
 </div>
