actualizar info de la pareja

--- a/_includes/sections/couple.html
+++ b/_includes/sections/couple.html
@@ -3,9 +3,8 @@
     <img src="images/pic01.jpg" alt="" />
   </div>
   <div class="content">
-    <h2>Pablo y Liza</h2>
-    <p>Pablo Rengifo, nativo de Cali, y Liza Gruesso, nativa
-    de Bogotá, se conocieron en Guasca en el 2016 gracias a su amiga PepaPig.</p>
+    <h2>Nosotros</h2>
+    <p>PEstamos juntos desde hace casi dos años y precisamente escogimos la fecha de nuestra boda, porque es nuestro segundo aniversario. Nos conocimos no sabemos cuando, ya que hemos coincidido en lugares y con amigos comunes desde hace muchos pero muchos años!!!</p>
   </div>
 </section>
 <section class="spotlight">
@@ -13,13 +12,7 @@
     <img src="images/pic02.jpg" alt="" />
   </div>
   <div class="content">
-    <p>It didn't take long for Pablo and Liza to realize that they had a lot
-    in common. They quickly bonded
-    over a love of cheesy nineties songs, brunch, Russian, and dumb jokes
-    (okay, that last one is really just Pablo). Soon they were spending every
-    minute together.</p>
-    <p>In early 2017, Pablo and Liza moved in together, and Mr. Paul
-    joined the family.</p>
+    <p>Nuestra historia es la confirmación de la sincronía del perfecto coincidir.</p>
   </div>
 </section>
 <section class="spotlight">
@@ -27,14 +20,6 @@
     <img src="images/pic03.jpg" alt="" />
   </div>
   <div class="content">
-    <p>Pablo and Liza both left KU in 2016 and now work in Bogota.
-    Pablo is an manager for
-    <a href="http://www.bancodealimentos.org.co/">Banco de Alimentos</a>, where he helps
-    ensure lower income families and individuals are fed.
-    Liza is an independent
-    consultant at <a href="http://www.microymacroconsultores.com/">Micro & Macro</a>, a Bogotá
-    consultancy focused on public service contracts.</p>
-    <p>Pablo and Liza both love their jobs and are looking forward to starting
-    the next chapter of their lives together in Bogotá.</p>
+    <p>“Cuenta la leyenda que un hilo rojo invisible conecta a aquellos que están destinados a encontrarse, sin importar el momento, el lugar o las circunstancias. El hilo puede alargarse o enredarse, pero nunca se romperá”.</p>
   </div>
 </section>
