--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,13 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#intro" class="more scrolly">La Boda</a></li>
-            <li><a href="#couple" class="more scrolly">La Pareja</a></li>
+            <li><a href="#intro" class="more scrolly">Los Detalles</a></li>
+            <li><a href="#couple" class="more scrolly">Nosotros</a></li>
             <li><a href="#travel" class="more scrolly">El Lugar</a></li>
             <li><a href="#location" class="more scrolly">El Mapa</a></li>
             <!--<li><a href="#lodging" class="more scrolly">Lodging</a></li>-->
             <!--<li><a href="#party" class="more scrolly">The Wedding Party</a></li>-->
-            <li><a href="#registry" class="more scrolly">La Bolsa de Viaje</a></li>
+            <li><a href="#registry" class="more scrolly">Los Regalos</a></li>
             <li><a href="#cta" class="more scrolly">Contáctanos</a></li>
           </ul>
         </div>
