--- a/_includes/sections/registry.html
+++ b/_includes/sections/registry.html
@@ -1,7 +1,19 @@
 <div class="inner">
   <header class="major">
-    <h2>La Bolsa de Viaje</h2>
-    <p>Pablo y Liza han soñado por mucho tiempo con conocer la <a href="https://es.wikipedia.org/wiki/Aurora_polar"> Aurora Boreal</a>. Puedes ayudarles a cumplir su sueño haciendo una contribución a su Bolsa de Viaje, la cual tienen registrada en la agencia de viajes <a href="http://www.reyestours.com/">Reyes Tours</a>.</p>
+    <h2>Los Regalos</h2>
+    <p>Uno de nuestros sueños, es conocer la <a href="https://es.wikipedia.org/wiki/Aurora_polar"> Aurora Boreal</a> que se observa en el punto más norte del planeta, incluso más al norte que el círculo polar ártico, en la Laponia Finlandesa.</p>
+
+    <p>Por eso, nos encantaría que nuestros invitados participaran de este sueño con su contribución a nuestra Bolsa de Viaje que creamos en la Agencia <a href="http://www.reyestours.com/">Reyes Tours</a>.</p>
+
+    <p>Agente Responsable</p>
+
+    <p> <b>Maria Fernanda Tovar</b>
+		<b>Travel Consultant</b>
+		<b>Reyes Tours</b>
+		Carrera 9 # 80-15 Oficina 204 
+		PBX (+57 1) 2489500 EXT: 121 
+		CELULAR (+57) 3102446287 
+		<a href="http://www.reyestours.com/">www.reyestours.com</a>.</p>
   </header>
     <h4><a href="http://www.reyestours.com/">Visita la Bolsa de Viaje de Pablo y Liza.</a></h4>
 </div>
