--- a/_includes/sections/intro.html
+++ b/_includes/sections/intro.html
@@ -15,9 +15,9 @@
 
     <p>Estamos muy emocionados!!!</p>
 
-    <p><em>“Este es el sueño que compartimos,
-el que queremos cuidar a lo largo del tiempo,
-el que hablará por nosotros, más que cualquier palabra,
+    <p><em>“Este es el sueño que compartimos,<br>
+el que queremos cuidar a lo largo del tiempo,<br>
+el que hablará por nosotros, más que cualquier palabra,<br>
 el que nos reencontrará en cada amanecer y en cada despertar”.</em></p>
   </header>
 </div>
