--- a/_includes/sections/couple.html
+++ b/_includes/sections/couple.html
@@ -4,7 +4,7 @@
   </div>
   <div class="content">
     <h2>Nosotros</h2>
-    <p>PEstamos juntos desde hace casi dos años y precisamente escogimos la fecha de nuestra boda, porque es nuestro segundo aniversario. Nos conocimos no sabemos cuando, ya que hemos coincidido en lugares y con amigos comunes desde hace muchos pero muchos años!!!</p>
+    <p>Estamos juntos desde hace casi dos años y precisamente escogimos la fecha de nuestra boda, porque es nuestro segundo aniversario. Nos conocimos no sabemos cuando, ya que hemos coincidido en lugares y con amigos comunes desde hace muchos pero muchos años!!!</p>
   </div>
 </section>
 <section class="spotlight">
