--- a/_includes/sections/registry.html
+++ b/_includes/sections/registry.html
@@ -7,12 +7,12 @@
 
     <p>Agente Responsable</p>
 
-    <p> <b>Maria Fernanda Tovar</b>
-		<b>Travel Consultant</b>
-		<b>Reyes Tours</b>
-		Carrera 9 # 80-15 Oficina 204 
-		PBX (+57 1) 2489500 EXT: 121 
-		CELULAR (+57) 3102446287 
+    <p> <b>Maria Fernanda Tovar</b><br>
+		<b>Travel Consultant</b><br>
+		<b>Reyes Tours</b><br>
+		Carrera 9 # 80-15 Oficina 204<br>
+		PBX (+57 1) 2489500 EXT: 121<br>
+		CELULAR (+57) 3102446287<br>
 		<a href="http://www.reyestours.com/">www.reyestours.com</a>.</p>
   </header>
     <h4><a href="http://www.reyestours.com/">Visita la Bolsa de Viaje de Pablo y Liza.</a></h4>
