--- a/_includes/sections/rsvp.html
+++ b/_includes/sections/rsvp.html
@@ -1,7 +1,20 @@
 <div class="inner">
   <header>
-    <h2>Contactános</h2>
-    <p>Este botón te llevara a una forma en Google.</p>
+    <h2>La confirmación de asistencia RSVP</h2>
+    <p>Para que todo salga de la mejor manera, es muy importante que por favor nos confirmen su asistencia. Puede ser a nosotros directamente, a nuestras madres o, bien, en esta página web.</p>
+
+    <p>Liza: (057) 310-295-3413<br>
+       <a href="mailto:lizagruesso@yahoo.com">lizagruesso@yahoo.com</a></p>
+
+    <p>Pablo: (057) 312-536-5797<br>
+       <a href="mailto:pablo.renjifo@gmail.com">pablo.renjifo@gmail.com</a></p>
+    
+    <p>Margarita: (057) 315-631-1242<br>
+       <a href="mailto:margaritacely@hotmail.com">margaritacely@hotmail.com</a></p>
+
+    <p>Leticia: (057) 310-395-4496<br>
+       <a href="mailto:letty722000@yahoo.com">letty722000@yahoo.com</a></p>
+
   </header>
   <ul class="actions vertical">
     <li><a href="https://goo.gl/forms/CU33FgCnaEf5zuA43" class="button fit special">CONTACTO</a></li>
