--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
             <!--<li><a href="#lodging" class="more scrolly">Lodging</a></li>-->
             <!--<li><a href="#party" class="more scrolly">The Wedding Party</a></li>-->
             <li><a href="#registry" class="more scrolly">Los Regalos</a></li>
-            <li><a href="#cta" class="more scrolly">Contáctanos</a></li>
+            <li><a href="#cta" class="more scrolly">RSVP</a></li>
           </ul>
         </div>
       </li>
